gccida/c3/emit_case_nodes
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6469:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6474:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6484:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *initial; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6511:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v51; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6515:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v55; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6545:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v85; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6551:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v91; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6553:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v93; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6554:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v94; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6557:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v97; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6558:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v98; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6564:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v104; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6568:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v108; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6571:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode oldmodea; // [rsp+8h] [rbp-60h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6572:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+Ch] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6573:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+Ch] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6576:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *label; // [rsp+30h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/stmt.c:6799:28: error: use of undeclared identifier 'machine_mode'
v15 = convert_modes( v9, ( machine_mode)v11, v12, v10); 
                           ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/emit_case_nodes/src/obj/stmt.o] Error 1
